feat: implement admin dashboard and management features including clinic, user, and reporting modules